Background scrolls with content on deployment bug fix attempt #13 stack overflow psuedo element suggestion

--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,22 @@ body {
     letter-spacing: 0.03rem;
 }
 
-.background {
+/* .background {
     background-image: url("/spongebob-flowers-mobile.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-}
+} */
+
+/* .background:before {
+    background-image: url("/spongebob-flowers-mobile.png");
+    background-repeat: no-repeat;
+    content: "";
+    position: fixed;
+    height: 100%;
+    width: 100%;
+} */
 
 .gradient-text {
     background-image: linear-gradient(
